Update to Junit5 and AssertJ